# static-web-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  package.json  server.cjs
src/: main.rs
