[package]
name = "static-web-server"
authors = ["Afonso Coutinho <afonsopcastro@gmail.com>"]
license = "MIT"
version = "1.0.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
warp = "0.3.6"
